--- a/projects/ng-aquila/src/input/password-toggle.component.scss
+++ b/projects/ng-aquila/src/input/password-toggle.component.scss
@@ -20,6 +20,10 @@ $icon-size: nx-spacer(m);
 
 :host:hover {
   @include var(color, hover-primary);
+
+  @media screen and (-ms-high-contrast: active) {
+    color: buttonText;
+  }
 }
 
 :host-context([data-whatinput="keyboard"]):focus {
